# sop-mcp

./: .gitignore  AGENT.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  workflow.yaml
.kiro/settings/: mcp.json
.kiro/specs/pypi-publish-and-ci/: design.md  requirements.md  tasks.md
.kiro/specs/sop-storage-abstraction/: design.md  requirements.md  tasks.md
.kiro/steering/: python-tooling.md  sop-rfc2119.md
docs/adr/: 0001-step-output-parameter.md  0002-previous-outputs-removal.md
src/: __init__.py  server.py
src/mcp/: __init__.py
src/mcp/resources/: __init__.py  sop_content.py
src/mcp/resources/sop_creation_guide/: v1.3.md
src/mcp/tools/: __init__.py  publish_sop.py  run_sop.py  run_sop_strict.py  submit_sop_feedback.py
src/sops/authoring_new_sop/: v1.0.md
src/sops/sop_creation_guide/: v1.0.md  v1.1.md  v1.2.md
src/utils/: __init__.py  sop_parser.py  storage_backend.py  storage_local.py  storage_s3.py
tests/: test_e2e_mcp.py  test_handler.py  test_parser.py  test_pyproject.py  test_storage_backend.py  test_storage_config.py  test_storage_local_unit.py  test_storage_s3.py  test_workflows.py
