[project]
name = "sop-mcp"
version = "0.6.0"
description = "An MCP server for guiding users through Standard Operating Procedures"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["mcp", "sop", "standard-operating-procedure", "ai-agent"]
authors = [
    { name = "ValueArchitectsAI", email = "info@valuearchitects.ai" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastmcp>=3.0.0rc1",
]

[project.urls]
Homepage = "https://github.com/ValueArchitectsAI/sop-mcp"
Repository = "https://github.com/ValueArchitectsAI/sop-mcp"
Issues = "https://github.com/ValueArchitectsAI/sop-mcp/issues"

[dependency-groups]
dev = [
    "hypothesis>=6.0.0,<6.123.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "pyyaml>=6.0.3",
    "ruff>=0.8.0",
    "tox>=4.0.0",
    "tox-uv>=1.0.0",
]

[project.scripts]
sop-mcp = "src.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.tox]
env_list = ["py310", "py311", "py312", "py313", "lint"]

[tool.tox.env_run_base]
description = "Run tests"
deps = [
    "hypothesis>=6.0.0,<6.123.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "pyyaml>=6.0.3",
    "tomli>=2.0.0;python_version<'3.11'",
]
commands = [["pytest", "{posargs}"]]

[tool.tox.env.lint]
description = "Run linters"
deps = ["ruff>=0.8.0"]
commands = [
    ["ruff", "check", "src/", "tests/"],
    ["ruff", "format", "--check", "src/", "tests/"],
]
